// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`CurrencyFormat constructing number formats should work for respective locale and currency: ar-SA_SAR 1`] = `
CurrencyFormat {
  "currency": "ر.س.",
  "decimalSymbol": "٫",
  "digits": Array [
    "٠",
    "١",
    "٢",
    "٣",
    "٤",
    "٥",
    "٦",
    "٧",
    "٨",
    "٩",
  ],
  "groupingSymbol": "٬",
  "locale": "ar-SA",
  "maximumFractionDigits": 2,
  "minimumFractionDigits": 2,
  "minusSign": "-",
  "negativePrefix": "؜-",
  "negativeSuffix": " ر.س.‏",
  "options": Object {
    "currency": "SAR",
    "currencyDisplay": undefined,
    "currencySign": undefined,
    "style": "currency",
  },
  "prefix": "",
  "suffix": " ر.س.‏",
}
`;

exports[`CurrencyFormat constructing number formats should work for respective locale and currency: bg-BG_BGN 1`] = `
CurrencyFormat {
  "currency": "лв.",
  "decimalSymbol": ",",
  "digits": Array [
    "0",
    "1",
    "2",
    "3",
    "4",
    "5",
    "6",
    "7",
    "8",
    "9",
  ],
  "groupingSymbol": undefined,
  "locale": "bg-BG",
  "maximumFractionDigits": 2,
  "minimumFractionDigits": 2,
  "minusSign": "-",
  "negativePrefix": "-",
  "negativeSuffix": " лв.",
  "options": Object {
    "currency": "BGN",
    "currencyDisplay": undefined,
    "currencySign": undefined,
    "style": "currency",
  },
  "prefix": "",
  "suffix": " лв.",
}
`;

exports[`CurrencyFormat constructing number formats should work for respective locale and currency: de-CH_EUR 1`] = `
CurrencyFormat {
  "currency": "EUR",
  "decimalSymbol": ".",
  "digits": Array [
    "0",
    "1",
    "2",
    "3",
    "4",
    "5",
    "6",
    "7",
    "8",
    "9",
  ],
  "groupingSymbol": "’",
  "locale": "de-CH",
  "maximumFractionDigits": 2,
  "minimumFractionDigits": 2,
  "minusSign": "-",
  "negativePrefix": "EUR-",
  "negativeSuffix": "",
  "options": Object {
    "currency": "EUR",
    "currencyDisplay": undefined,
    "currencySign": undefined,
    "style": "currency",
  },
  "prefix": "EUR ",
  "suffix": "",
}
`;

exports[`CurrencyFormat constructing number formats should work for respective locale and currency: de-DE_EUR 1`] = `
CurrencyFormat {
  "currency": "€",
  "decimalSymbol": ",",
  "digits": Array [
    "0",
    "1",
    "2",
    "3",
    "4",
    "5",
    "6",
    "7",
    "8",
    "9",
  ],
  "groupingSymbol": ".",
  "locale": "de-DE",
  "maximumFractionDigits": 2,
  "minimumFractionDigits": 2,
  "minusSign": "-",
  "negativePrefix": "-",
  "negativeSuffix": " €",
  "options": Object {
    "currency": "EUR",
    "currencyDisplay": undefined,
    "currencySign": undefined,
    "style": "currency",
  },
  "prefix": "",
  "suffix": " €",
}
`;

exports[`CurrencyFormat constructing number formats should work for respective locale and currency: en-GB_GBP 1`] = `
CurrencyFormat {
  "currency": "£",
  "decimalSymbol": ".",
  "digits": Array [
    "0",
    "1",
    "2",
    "3",
    "4",
    "5",
    "6",
    "7",
    "8",
    "9",
  ],
  "groupingSymbol": ",",
  "locale": "en-GB",
  "maximumFractionDigits": 2,
  "minimumFractionDigits": 2,
  "minusSign": "-",
  "negativePrefix": "-£",
  "negativeSuffix": "",
  "options": Object {
    "currency": "GBP",
    "currencyDisplay": undefined,
    "currencySign": undefined,
    "style": "currency",
  },
  "prefix": "£",
  "suffix": "",
}
`;

exports[`CurrencyFormat constructing number formats should work for respective locale and currency: en-IN_INR 1`] = `
CurrencyFormat {
  "currency": "₹",
  "decimalSymbol": ".",
  "digits": Array [
    "0",
    "1",
    "2",
    "3",
    "4",
    "5",
    "6",
    "7",
    "8",
    "9",
  ],
  "groupingSymbol": ",",
  "locale": "en-GB",
  "maximumFractionDigits": 2,
  "minimumFractionDigits": 2,
  "minusSign": "-",
  "negativePrefix": "-₹",
  "negativeSuffix": "",
  "options": Object {
    "currency": "INR",
    "currencyDisplay": undefined,
    "currencySign": undefined,
    "style": "currency",
  },
  "prefix": "₹",
  "suffix": "",
}
`;

exports[`CurrencyFormat constructing number formats should work for respective locale and currency: en-US_USD 1`] = `
CurrencyFormat {
  "currency": "$",
  "decimalSymbol": ".",
  "digits": Array [
    "0",
    "1",
    "2",
    "3",
    "4",
    "5",
    "6",
    "7",
    "8",
    "9",
  ],
  "groupingSymbol": ",",
  "locale": "en-US",
  "maximumFractionDigits": 2,
  "minimumFractionDigits": 2,
  "minusSign": "-",
  "negativePrefix": "-$",
  "negativeSuffix": "",
  "options": Object {
    "currency": "USD",
    "currencyDisplay": undefined,
    "currencySign": undefined,
    "style": "currency",
  },
  "prefix": "$",
  "suffix": "",
}
`;

exports[`CurrencyFormat constructing number formats should work for respective locale and currency: es-ES_EUR 1`] = `
CurrencyFormat {
  "currency": "€",
  "decimalSymbol": ",",
  "digits": Array [
    "0",
    "1",
    "2",
    "3",
    "4",
    "5",
    "6",
    "7",
    "8",
    "9",
  ],
  "groupingSymbol": ".",
  "locale": "es-ES",
  "maximumFractionDigits": 2,
  "minimumFractionDigits": 2,
  "minusSign": "-",
  "negativePrefix": "-",
  "negativeSuffix": " €",
  "options": Object {
    "currency": "EUR",
    "currencyDisplay": undefined,
    "currencySign": undefined,
    "style": "currency",
  },
  "prefix": "",
  "suffix": " €",
}
`;

exports[`CurrencyFormat constructing number formats should work for respective locale and currency: fa-IR_IRR 1`] = `
CurrencyFormat {
  "currency": "ریال",
  "decimalSymbol": undefined,
  "digits": Array [
    "۰",
    "۱",
    "۲",
    "۳",
    "۴",
    "۵",
    "۶",
    "۷",
    "۸",
    "۹",
  ],
  "groupingSymbol": "٬",
  "locale": "fa-IR",
  "maximumFractionDigits": 0,
  "minimumFractionDigits": 0,
  "minusSign": "−",
  "negativePrefix": "‎−‎ریال ",
  "negativeSuffix": "",
  "options": Object {
    "currency": "IRR",
    "currencyDisplay": undefined,
    "currencySign": undefined,
    "style": "currency",
  },
  "prefix": "‎ریال ",
  "suffix": "",
}
`;

exports[`CurrencyFormat constructing number formats should work for respective locale and currency: fr-CH_CHF 1`] = `
CurrencyFormat {
  "currency": "CHF",
  "decimalSymbol": ".",
  "digits": Array [
    "0",
    "1",
    "2",
    "3",
    "4",
    "5",
    "6",
    "7",
    "8",
    "9",
  ],
  "groupingSymbol": " ",
  "locale": "fr-CH",
  "maximumFractionDigits": 2,
  "minimumFractionDigits": 2,
  "minusSign": "-",
  "negativePrefix": "-",
  "negativeSuffix": " CHF",
  "options": Object {
    "currency": "CHF",
    "currencyDisplay": undefined,
    "currencySign": undefined,
    "style": "currency",
  },
  "prefix": "",
  "suffix": " CHF",
}
`;

exports[`CurrencyFormat constructing number formats should work for respective locale and currency: ja_JPY 1`] = `
CurrencyFormat {
  "currency": "￥",
  "decimalSymbol": undefined,
  "digits": Array [
    "0",
    "1",
    "2",
    "3",
    "4",
    "5",
    "6",
    "7",
    "8",
    "9",
  ],
  "groupingSymbol": ",",
  "locale": "ja",
  "maximumFractionDigits": 0,
  "minimumFractionDigits": 0,
  "minusSign": "-",
  "negativePrefix": "-￥",
  "negativeSuffix": "",
  "options": Object {
    "currency": "JPY",
    "currencyDisplay": undefined,
    "currencySign": undefined,
    "style": "currency",
  },
  "prefix": "￥",
  "suffix": "",
}
`;

exports[`CurrencyFormat constructing number formats should work for respective locale and currency: nl-NL_EUR 1`] = `
CurrencyFormat {
  "currency": "€",
  "decimalSymbol": ",",
  "digits": Array [
    "0",
    "1",
    "2",
    "3",
    "4",
    "5",
    "6",
    "7",
    "8",
    "9",
  ],
  "groupingSymbol": ".",
  "locale": "nl-NL",
  "maximumFractionDigits": 2,
  "minimumFractionDigits": 2,
  "minusSign": "-",
  "negativePrefix": "€ -",
  "negativeSuffix": "",
  "options": Object {
    "currency": "EUR",
    "currencyDisplay": undefined,
    "currencySign": undefined,
    "style": "currency",
  },
  "prefix": "€ ",
  "suffix": "",
}
`;

exports[`CurrencyFormat constructing number formats should work for respective locale and currency: pt_BRL 1`] = `
CurrencyFormat {
  "currency": "R$",
  "decimalSymbol": ",",
  "digits": Array [
    "0",
    "1",
    "2",
    "3",
    "4",
    "5",
    "6",
    "7",
    "8",
    "9",
  ],
  "groupingSymbol": ".",
  "locale": "pt",
  "maximumFractionDigits": 2,
  "minimumFractionDigits": 2,
  "minusSign": "-",
  "negativePrefix": "-R$ ",
  "negativeSuffix": "",
  "options": Object {
    "currency": "BRL",
    "currencyDisplay": undefined,
    "currencySign": undefined,
    "style": "currency",
  },
  "prefix": "R$ ",
  "suffix": "",
}
`;

exports[`CurrencyFormat constructing number formats should work for respective locale and currency: zh_CNY 1`] = `
CurrencyFormat {
  "currency": "¥",
  "decimalSymbol": ".",
  "digits": Array [
    "0",
    "1",
    "2",
    "3",
    "4",
    "5",
    "6",
    "7",
    "8",
    "9",
  ],
  "groupingSymbol": ",",
  "locale": "zh",
  "maximumFractionDigits": 2,
  "minimumFractionDigits": 2,
  "minusSign": "-",
  "negativePrefix": "-¥",
  "negativeSuffix": "",
  "options": Object {
    "currency": "CNY",
    "currencyDisplay": undefined,
    "currencySign": undefined,
    "style": "currency",
  },
  "prefix": "¥",
  "suffix": "",
}
`;
